--- a/ViewPager各种功能/build.gradle
+++ b/ViewPager各种功能/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.youth.banner:banner:1.4.9'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
